feat(RELTEC-11165): added api operation to load all owner data including services and repositories in one request
